2023-06-26
	clad 1.1.2
	prog options now reachable only through a function call

2023-06-25
	clad 1.1.1
	address cli option - sscanf format now "%zx" for size_t

2023-02-26
	clad 1.1
	bugfix - asm buffer length error didn't report
	bugfix - exit after printing help
	static limits removed
	input coalescing added
	
	clad 1.0.1
	bugfix - asm memory leak